this just something

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>hola</p>
+    <nav class="navbar">
+        <ul>
+            <li>Menu</li>
+            <li>Home</li>
+        </ul>
+    </nav>
+
+    <section class="sect">
+        <div class="patientDetails">
+
+        </div>
+    </section>
 </body>
 </html>
