Main layout and design, change and work of it

--- a/index.html
+++ b/index.html
@@ -8,15 +8,219 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul>
-            <li>Menu</li>
-            <li>Home</li>
-        </ul>
+
     </nav>
 
     <section class="sect">
-        <div class="patientDetails">
-
+        <div class="grid-container">
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <span>Name: John Doe</span>
+                    <span>Male</span>
+                    <span>Age: 56</span>
+                </div>
+                <div class="card-body">
+                    <div class="left">
+                        <div class="avatar"></div>
+                        <div class="last-updated">
+                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="dept-room">Department: — Room No.: —</div>
+                        <div class="info">
+                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
+                            <p>NIBP: 117/79 mmHg</p>
+                            <p>Pulse Rate: 74 bpm</p>
+                            <p>SpO<sub>2</sub>: 98%</p>
+                            <p>Temperature: 36.3°C / 97.1°F</p>
+                        </div>
+                        <button class="update-btn">Manual Update</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
