--- a/index.html
+++ b/index.html
@@ -1,227 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Patient Records</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav class="navbar">
+<div class="view-toggle">
+    <button onclick="setView('grid')">Grid View</button>
+    <button onclick="setView('list')">List View</button>
+</div>
 
-    </nav>
+<div class="header-row" id="header-row">
+    <div>Name</div>
+    <div>Last Updated</div>
+    <div>Age</div>
+    <div>Gender</div>
+    <div>Height/Weight</div>
+    <div>NIBP</div>
+    <div>PR</div>
+    <div>SpO<sub>2</sub></div>
+    <div>Temp</div>
+    <div>Status</div>
+    <div></div>
+</div>
+<div id="container" class="grid-view"></div>
 
-    <section class="sect">
-        <div class="grid-container">
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <span>Name: John Doe</span>
-                    <span>Male</span>
-                    <span>Age: 56</span>
-                </div>
-                <div class="card-body">
-                    <div class="left">
-                        <div class="avatar"></div>
-                        <div class="last-updated">
-                            <em>Latest Updated:<br>DD/MM/YYYY<br>HH:MM:SS</em>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="dept-room">Department: — Room No.: —</div>
-                        <div class="info">
-                            <p>Height: 180cm &nbsp;&nbsp;&nbsp;&nbsp; Weight: 70kg &nbsp;&nbsp;&nbsp;&nbsp; Status: -</p>
-                            <p>NIBP: 117/79 mmHg</p>
-                            <p>Pulse Rate: 74 bpm</p>
-                            <p>SpO<sub>2</sub>: 98%</p>
-                            <p>Temperature: 36.3°C / 97.1°F</p>
-                        </div>
-                        <button class="update-btn">Manual Update</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<script src="script.js"></script>
 </body>
 </html>
