Added the header and a navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <header>
+        <div id="page-title">Patient Records</div>
+        <img src="images/logo-Placeholder.jpg" alt="logo_placeholder">
+    </header>
+
+    <nav class="navbar">
+        <ul>
+            <li>Home</li>
+        </ul>
+    </nav>
+
     <main>
         <div class="view-toggle">
             <button id="toggleViewBtn">Switch to List View</button>
