Added an initial security system for login

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Security Overlay-->
     <div id="overlay">
         <div id="entry-box">
-            <h2>Enter your hospital ID</h2>
+            <h2>Enter your hospital ID</h2><br>
             <form id="entry-form">
                 <div class="input-wrapper">
                     <input type="password" id="code-input" placeholder="Enter hospital ID" required />
